--- a/theme/theme.css
+++ b/theme/theme.css
@@ -1,19 +1,90 @@
-:root {
-    --primary-color: #536dfe; /* YML: #3A3EDD */
-    --secondary-color: #a553fe; /* YML: #BF00F5 */
-    --main-button-background: #8600eb; /* YML: #724ceb */
-    --primary-background: linear-gradient(var(--primary-color), var(--secondary-color));
-    --primary-background-toright: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
-    --primary-background-progress: linear-gradient(90deg, var(--primary-color), var(--secondary-color), var(--secondary-color));
-    /* teal-a200 */
-    --success-color: #64FFDA; /* YML: #00E7B8 */
-    /* red-a400 */
-    --error-color: #FF1744;
-    /* amber a400 */
-    --warning-color: #FFC400;
-    --secondary-text-color: rgba(0, 0, 0, 0.7);
-    --secondary-cta-color: rgba(255, 255, 255, 0.7);
-    --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-    --max-width: 368px;
-    --max-content-width: 960px;
+html {
+    /* Nimiq color palette */
+    --nimiq-blue:       #1F2348;
+    --nimiq-light-blue: #0582CA;
+    --nimiq-gold:       #E9B213;
+    --nimiq-green:      #21BCA5;
+    --nimiq-orange:     #FC8702;
+    --nimiq-red:        #D94432;
+    --nimiq-gray:       #F4F4F5;
+
+    --nimiq-blue-bg:       radial-gradient(ellipse at 100% 100%, #260133, var(--nimiq-blue));
+    --nimiq-light-blue-bg: radial-gradient(ellipse at 100% 100%, #265DD7, var(--nimiq-light-blue));
+    --nimiq-gold-bg:       radial-gradient(ellipse at 100% 100%, #EC991C, var(--nimiq-gold));
+    --nimiq-green-bg:      radial-gradient(ellipse at 100% 100%, #41A38E, var(--nimiq-green));
+    --nimiq-orange-bg:     radial-gradient(ellipse at 100% 100%, #FD6216, var(--nimiq-orange));
+    --nimiq-red-bg:        radial-gradient(ellipse at 100% 100%, #CC3047, var(--nimiq-red));
+    --nimiq-gray-bg:       radial-gradient(ellipse at 100% 100%, #F4F4F4, var(--nimiq-gray));
+}
+
+body {
+    color: var(--nimiq-blue);
+    background: #F4F4F5;
+    background-image: var(--nimiq-gray-bg);
+    margin: 0;
+}
+
+.nq-blue {
+    color: var(--nimiq-blue);
+}
+
+.nq-light-blue {
+    color: var(--nimiq-light-blue);
+}
+
+.nq-gold {
+    color: var(--nimiq-gold);
+}
+
+.nq-green {
+    color: var(--nimiq-green);
+}
+
+.nq-orange {
+    color: var(--nimiq-orange);
+}
+
+.nq-red {
+    color: var(--nimiq-red);
+}
+
+.nq-bg-blue {
+    background: var(--nimiq-blue);
+    background-image: var(--nimiq-blue-bg);
+    color: white;
+}
+
+.nq-bg-light-blue {
+    background: var(--nimiq-light-blue);
+    background-image: var(--nimiq-light-blue-bg);
+    color: white;
+}
+
+.nq-bg-gold {
+    background: var(--nimiq-gold);
+    background-image: var(--nimiq-gold-bg);
+    color: white;
+}
+
+.nq-bg-green {
+    background: var(--nimiq-green);
+    background-image: var(--nimiq-green-bg);
+    color: white;
+}
+
+.nq-bg-orange {
+    background: var(--nimiq-orange);
+    background-image: var(--nimiq-orange-bg);
+    color: white;
+}
+
+.nq-bg-red {
+    background: var(--nimiq-red);
+    background-image: var(--nimiq-red-bg);
+    color: white;
+}
+
+.nq-bg-gray {
+    background: var(--nimiq-gray);
+    background-image: var(--nimiq-gray-bg);
 }
