--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,7 @@
-@import 'theme/theme.css';
-@import 'typography/typography.css';
-@import 'inputs/inputs.css';
-@import 'layout/layout.css';
+@import 'theme.css';
+@import 'typography.css';
+@import 'inputs.css';
+@import 'layout.css';
 
 /* @import 'material-icons/material-icons.css'; */
 /* @import 'animations/animations.css'; */
