--- a/src/typography.css
+++ b/src/typography.css
@@ -26,6 +26,13 @@ body {
     margin: 1.5rem 0;
 }
 
+.nq-h3 {
+    font-size: 2rem;
+    line-height: 3rem;
+    font-weight: bold;
+    margin: 1.25rem 0;
+}
+
 .nq-text {
     font-size: 2rem;
     line-height: 1.375;
