--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,7 @@
 @import 'typography.css';
 @import 'inputs.css';
 @import 'layout.css';
+@import 'icons.css';
 
 /* @import 'material-icons/material-icons.css'; */
 /* @import 'animations/animations.css'; */
