--- a/src/buttons.css
+++ b/src/buttons.css
@@ -27,6 +27,11 @@
     font-family: inherit;
 }
 
+.nq-button.inverse {
+    background: white !important;
+    color: var(--nimiq-blue);
+}
+
 .nq-button[disabled] {
     opacity: 0.4;
     box-shadow: none;
@@ -95,6 +100,10 @@
     background-image: var(--nimiq-light-blue-bg);
 }
 
+.nq-button.light-blue.inverse {
+    color: var(--nimiq-light-blue);
+}
+
 .nq-button-s.light-blue {
     color: var(--nimiq-light-blue);
     background-color: rgba(5, 130, 202, 0.07); /* Based on Nimiq Light Blue */
@@ -113,6 +122,10 @@
 .nq-button.green {
     background: var(--nimiq-green);
     background-image: var(--nimiq-green-bg);
+}
+
+.nq-button.green.inverse {
+    color: var(--nimiq-green);
 }
 
 .nq-button-s.green {
@@ -135,6 +148,10 @@
     background-image: var(--nimiq-orange-bg);
 }
 
+.nq-button.orange.inverse {
+    color: var(--nimiq-orange);
+}
+
 .nq-button-s.orange {
     color: var(--nimiq-orange);
     background-color: rgba(252, 135, 2, 0.07); /* Based on Nimiq Orange */
@@ -153,6 +170,10 @@
 .nq-button.red {
     background: var(--nimiq-red);
     background-image: var(--nimiq-red-bg);
+}
+
+.nq-button.red.inverse {
+    color: var(--nimiq-red);
 }
 
 .nq-button-s.red {
