--- a/src/theme.css
+++ b/src/theme.css
@@ -9,13 +9,15 @@ html {
     --nimiq-gray:       #F4F4F5;
     --nimiq-light-gray: #FAFAFA;
 
-    --nimiq-blue-bg:       radial-gradient(ellipse at 100% 100%, #260133, var(--nimiq-blue));
-    --nimiq-light-blue-bg: radial-gradient(ellipse at 100% 100%, #265DD7, var(--nimiq-light-blue));
-    --nimiq-gold-bg:       radial-gradient(ellipse at 100% 100%, #EC991C, var(--nimiq-gold));
-    --nimiq-green-bg:      radial-gradient(ellipse at 100% 100%, #41A38E, var(--nimiq-green));
-    --nimiq-orange-bg:     radial-gradient(ellipse at 100% 100%, #FD6216, var(--nimiq-orange));
-    --nimiq-red-bg:        radial-gradient(ellipse at 100% 100%, #CC3047, var(--nimiq-red));
-    --nimiq-gray-bg:       radial-gradient(ellipse at 100% 100%, #F4F4F4, var(--nimiq-gray));
+    /* Background gradients */
+    --nimiq-blue-bg:       radial-gradient(circle at bottom right, #260133, var(--nimiq-blue));
+    --nimiq-light-blue-bg: radial-gradient(circle at bottom right, #265DD7, var(--nimiq-light-blue));
+    --nimiq-gold-bg:       radial-gradient(circle at bottom right, #EC991C, var(--nimiq-gold));
+    --nimiq-green-bg:      radial-gradient(circle at bottom right, #41A38E, var(--nimiq-green));
+    --nimiq-orange-bg:     radial-gradient(circle at bottom right, #FD6216, var(--nimiq-orange));
+    --nimiq-red-bg:        radial-gradient(circle at bottom right, #CC3047, var(--nimiq-red));
+    --nimiq-gray-bg:       radial-gradient(circle at bottom right, #F4F4F4, var(--nimiq-gray));
+
 
     /* Special colors */
     --nimiq-border-color: rgba(31, 35, 72, 0.1); /* Based on Nimiq Blue */
