Add name & author comments to built files

--- a/src/layout.css
+++ b/src/layout.css
@@ -41,6 +41,7 @@ body {
     border-radius: 1rem;
     box-shadow: 0 0.5rem 3.5rem rgba(0, 0, 0, 0.111158);
     margin: 2rem;
+    color: var(--nimiq-blue);
 }
 
 @media (max-width: 450px) {
