--- a/src/icons.css
+++ b/src/icons.css
@@ -1,3 +1,8 @@
+/*!
+Nimiq Style CSS Framework v0.3.4
+URL: https://github.com/nimiq/nimiq-style
+*/
+
 .nq-icon {
     width: 1em;
     height: 1em;
