--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,9 @@
+/*!
+Nimiq Style CSS Framework v0.3.4
+URL: https://github.com/nimiq/nimiq-style
+Styleguide: https://nimiq.com/styleguide
+*/
+
 @import 'theme.css';
 @import 'typography.css';
 @import 'buttons.css';
