--- a/src/typography.css
+++ b/src/typography.css
@@ -14,44 +14,46 @@ body {
 
 .nq-h1 {
     font-size: 3rem;
-    line-height: 3.5rem;
+    line-height: 1.2;
     font-weight: bold;
-    margin: 2rem 0;
+    margin: 3rem 0;
 }
 
 .nq-h2 {
     font-size: 2.5rem;
-    line-height: 3rem;
+    line-height: 1.2;
     font-weight: bold;
-    margin: 1.5rem 0;
+    margin: 2.5rem 0;
 }
 
 .nq-h3 {
     font-size: 2rem;
-    line-height: 3rem;
+    line-height: 1.2;
     font-weight: bold;
-    margin: 1.25rem 0;
+    margin: 2rem 0;
 }
 
 .nq-text {
     font-size: 2rem;
-    line-height: 1.375;
+    line-height: 1.3125;
     opacity: 0.7;
-    margin: 1.5rem 0;
+    margin: 2rem 0;
 }
 
 .nq-text-s {
     font-size: 1.75rem;
-    line-height: 1.1;
+    line-height: 1.2;
     font-weight: 600;
+    margin: 1rem 0;
 }
 
 .nq-label {
     font-size: 1.75rem;
-    line-height: 1.5rem;
+    line-height: 0.857;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 0.107em;
+    margin: 1rem 0;
     opacity: 0.7;
 }
 
@@ -72,6 +74,10 @@ body {
 .nq-link:active,
 .nq-link:hover {
     text-decoration: underline;
+}
+
+.nq-list {
+    font-size: 2rem;
 }
 
 .nq-list li {
