--- a/src/buttons.css
+++ b/src/buttons.css
@@ -20,17 +20,37 @@
     margin: 2rem auto;
     box-shadow: 0 0.5rem 1.75rem rgba(0, 0, 0, 0.15);
     cursor: pointer;
-    transition: transform 150ms, box-shadow 150ms, opacity 300ms;
+    transition: transform 450ms ease, box-shadow 450ms ease, opacity 300ms ease;
     will-change: transform, box-shadow, opacity;
     text-decoration: none;
     display: block;
     text-align: center;
     font-family: inherit;
+    overflow: hidden;
+}
+
+.nq-button::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: var(--nimiq-blue);
+    opacity: 0;
+    z-index: -1;
+    transition: opacity 300ms ease;
 }
 
 .nq-button.inverse {
     background: white !important;
     color: var(--nimiq-blue);
+}
+
+.nq-button.inverse:hover::before,
+.nq-button.inverse:active::before,
+.nq-button.inverse:focus::before {
+    opacity: 0;
 }
 
 .nq-button[disabled] {
@@ -41,8 +61,21 @@
 
 .nq-button:hover,
 .nq-button:active {
-    transform: translateY(0.25rem);
-    box-shadow: none;
+    transform: scale(1.02);
+    box-shadow: 0 0.5 3rem rgba(0,0,0,0.15);
+}
+
+.nq-button:hover::before,
+.nq-button:active::before,
+.nq-button:focus::before {
+    opacity: 1;
+}
+
+.nq-button:focus {
+    outline: none;
+    transform: scale(1.02) translate3D(0,1px,0);
+    box-shadow: 0 0 0 rgba(0,0,0,0.15);
+    transition: transform .2s ease, box-shadow .2s ease;
 }
 
 .nq-button[disabled]:hover,
@@ -62,7 +95,7 @@
     background-color: rgba(31, 35, 72, 0.07); /* Based on Nimiq Blue */
     color: var(--nimiq-blue);
     border-radius: 1.6875rem;
-    transition: color 300ms, background-color 300ms, transform 450ms;
+    transition: color 300ms ease, background-color 300ms ease, transform 450ms ease;
     will-change: color, background-color, transform;
     border: none;
     cursor: pointer;
@@ -111,6 +144,10 @@
     background-image: var(--nimiq-light-blue-bg);
 }
 
+.nq-button.light-blue::before {
+    background: var(--nimiq-light-blue);
+}
+
 .nq-button.light-blue.inverse {
     color: var(--nimiq-light-blue);
 }
@@ -133,6 +170,10 @@
 .nq-button.green {
     background: var(--nimiq-green);
     background-image: var(--nimiq-green-bg);
+}
+
+.nq-button.green::before {
+    background: var(--nimiq-green);
 }
 
 .nq-button.green.inverse {
@@ -159,6 +200,10 @@
     background-image: var(--nimiq-orange-bg);
 }
 
+.nq-button.orange::before {
+    background: var(--nimiq-orange);
+}
+
 .nq-button.orange.inverse {
     color: var(--nimiq-orange);
 }
@@ -181,6 +226,10 @@
 .nq-button.red {
     background: var(--nimiq-red);
     background-image: var(--nimiq-red-bg);
+}
+
+.nq-button.red::before {
+    background: var(--nimiq-red);
 }
 
 .nq-button.red.inverse {
